<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="keni.gd_new.FlatviewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            tools:context="keni.gd_new.FlatviewActivity"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/images"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:id="@+id/textInfo"
                android:textSize="18dp"
                android:layout_below="@+id/images"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_alignTop="@+id/textViewID"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:id="@+id/textViewID"
                android:layout_below="@+id/textInfo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_below="@+id/textViewDistrict"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:id="@+id/textViewDistrict"
                android:layout_below="@+id/textViewID"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_alignTop="@+id/textViewDistrict"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clas"
                android:id="@+id/textViewClass"
                android:layout_below="@+id/textViewDistrict"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_alignTop="@+id/textViewType"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:id="@+id/textViewType"
                android:layout_below="@+id/textViewClass"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_below="@+id/textViewAddress"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:id="@+id/textViewAddress"
                android:layout_below="@+id/textViewType"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_below="@+id/textViewType"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:id="@+id/textViewPlace"
                android:layout_below="@+id/textViewAddress"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_alignTop="@+id/textViewPrice"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textID"
                android:layout_below="@+id/textInfo"
                android:layout_alignRight="@+id/images"
                android:layout_alignEnd="@+id/images" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textDistrict"
                android:layout_below="@+id/textID"
                android:layout_alignRight="@+id/textID"
                android:layout_alignEnd="@+id/textID" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textClass"
                android:layout_below="@+id/textDistrict"
                android:layout_alignRight="@+id/textID"
                android:layout_alignEnd="@+id/textID" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textType"
                android:layout_below="@+id/textClass"
                android:layout_alignRight="@+id/textID"
                android:layout_alignEnd="@+id/textID" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textAddress"
                android:layout_below="@+id/textType"
                android:layout_alignRight="@+id/textID"
                android:layout_alignEnd="@+id/textID" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textPlace"
                android:layout_below="@+id/textAddress"
                android:layout_alignRight="@+id/textID"
                android:layout_alignEnd="@+id/textID" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/price"
                android:id="@+id/textViewPrice"
                android:textColor="@color/red"
                android:layout_below="@+id/textViewPlace"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_map"
                android:textSize="18dp"
                android:id="@+id/textViewOnMap"
                android:layout_below="@+id/textViewPrice"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/textViewOnMap" />

        </RelativeLayout>


    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/booking"
        android:textColor="@color/white"
        android:background="@color/red"
        android:id="@+id/buttonBooking"
        android:onClick="Booking"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false"

        android:focusableInTouchMode="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>

